updated with addtional analysis

--- a/Vine_Review_Analysis.ipynb
+++ b/Vine_Review_Analysis.ipynb
@@ -22,7 +22,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZA_kRQY5eHF-",
-        "outputId": "ca9d6836-58bb-4396-9e1c-e4d6fcb5a1ae"
+        "outputId": "f1b880ad-26e2-4ccd-a84a-45cf4f936651"
       },
       "source": [
         "import os\n",
@@ -53,21 +53,30 @@
         {
           "output_type": "stream",
           "text": [
-            "\r0% [Working]\r            \rIgn:1 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  InRelease\n",
-            "\r0% [Connecting to archive.ubuntu.com (91.189.88.152)] [Waiting for headers] [Co\r                                                                               \rGet:2 http://security.ubuntu.com/ubuntu bionic-security InRelease [88.7 kB]\n",
-            "Ign:3 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  InRelease\n",
-            "Hit:4 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  Release\n",
-            "Hit:5 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  Release\n",
-            "Hit:6 http://archive.ubuntu.com/ubuntu bionic InRelease\n",
-            "Hit:7 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic InRelease\n",
-            "Hit:8 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran40/ InRelease\n",
-            "Get:9 http://archive.ubuntu.com/ubuntu bionic-updates InRelease [88.7 kB]\n",
+            "\r0% [Working]\r            \rGet:1 http://security.ubuntu.com/ubuntu bionic-security InRelease [88.7 kB]\n",
+            "\r0% [Connecting to archive.ubuntu.com (91.189.88.142)] [1 InRelease 4,096 B/88.7\r                                                                               \rGet:2 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran40/ InRelease [3,626 B]\n",
+            "\r0% [Connecting to archive.ubuntu.com (91.189.88.142)] [1 InRelease 27.2 kB/88.7\r0% [Connecting to archive.ubuntu.com (91.189.88.142)] [1 InRelease 61.4 kB/88.7\r0% [2 InRelease gpgv 3,626 B] [Connecting to archive.ubuntu.com (91.189.88.142)\r0% [2 InRelease gpgv 3,626 B] [Connecting to archive.ubuntu.com (91.189.88.142)\r                                                                               \rIgn:3 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  InRelease\n",
+            "\r0% [2 InRelease gpgv 3,626 B] [Waiting for headers] [Waiting for headers] [Wait\r                                                                               \rHit:4 http://archive.ubuntu.com/ubuntu bionic InRelease\n",
+            "Get:5 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic InRelease [15.9 kB]\n",
+            "Ign:6 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  InRelease\n",
+            "Get:7 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  Release [697 B]\n",
+            "Hit:8 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  Release\n",
+            "Get:9 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  Release.gpg [836 B]\n",
+            "Get:10 http://archive.ubuntu.com/ubuntu bionic-updates InRelease [88.7 kB]\n",
             "Hit:11 http://ppa.launchpad.net/cran/libgit2/ubuntu bionic InRelease\n",
-            "Hit:13 http://ppa.launchpad.net/deadsnakes/ppa/ubuntu bionic InRelease\n",
-            "Get:14 http://archive.ubuntu.com/ubuntu bionic-backports InRelease [74.6 kB]\n",
-            "Hit:15 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu bionic InRelease\n",
-            "Get:16 http://archive.ubuntu.com/ubuntu bionic-updates/main amd64 Packages [2,657 kB]\n",
-            "Fetched 2,909 kB in 3s (956 kB/s)\n",
+            "Get:12 http://archive.ubuntu.com/ubuntu bionic-backports InRelease [74.6 kB]\n",
+            "Get:13 http://ppa.launchpad.net/deadsnakes/ppa/ubuntu bionic InRelease [15.9 kB]\n",
+            "Get:14 http://security.ubuntu.com/ubuntu bionic-security/main amd64 Packages [2,221 kB]\n",
+            "Get:15 http://security.ubuntu.com/ubuntu bionic-security/universe amd64 Packages [1,418 kB]\n",
+            "Hit:16 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu bionic InRelease\n",
+            "Ign:18 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  Packages\n",
+            "Get:18 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  Packages [637 kB]\n",
+            "Get:19 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic/main Sources [1,780 kB]\n",
+            "Get:20 http://archive.ubuntu.com/ubuntu bionic-updates/universe amd64 Packages [2,188 kB]\n",
+            "Get:21 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic/main amd64 Packages [910 kB]\n",
+            "Get:22 http://archive.ubuntu.com/ubuntu bionic-updates/main amd64 Packages [2,657 kB]\n",
+            "Get:23 http://ppa.launchpad.net/deadsnakes/ppa/ubuntu bionic/main amd64 Packages [40.8 kB]\n",
+            "Fetched 12.1 MB in 3s (3,785 kB/s)\n",
             "Reading package lists... Done\n"
           ],
           "name": "stdout"
@@ -111,7 +120,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yLYUvICTekFg",
-        "outputId": "8a089bfa-04ee-4fac-97ce-1b5bbfdb7137"
+        "outputId": "fd5f4386-db21-4ccc-91ec-0d0265eb27dd"
       },
       "source": [
         "from pyspark import SparkFiles\n",
@@ -172,7 +181,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tssPwIytfGCw",
-        "outputId": "72ef86da-29bd-4008-8f56-45647f10ce86"
+        "outputId": "25a3c9b2-7967-43d7-aa9a-6b4fd63b42cf"
       },
       "source": [
         "vine_df = df.select(['review_id','star_rating','helpful_votes','total_votes','vine','verified_purchase'])\n",
@@ -230,7 +239,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Q7bTUMr1f00Y",
-        "outputId": "aeb286f8-4160-4317-a0fa-eaf52dd08d36"
+        "outputId": "f67004f4-9808-4cd0-8fa9-778bde75e141"
       },
       "source": [
         "over_20_total_votes_df = vine_df.filter(vine_df['total_votes'] > 20)\n",
@@ -288,7 +297,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HhYO2YMpf6q0",
-        "outputId": "8f056cd0-e18f-42a4-c99c-907d3689b61a"
+        "outputId": "ceba9924-cb99-41ad-c97e-06065e4c4b57"
       },
       "source": [
         "helpful_voting_df = over_20_total_votes_df.filter((over_20_total_votes_df['helpful_votes'] / over_20_total_votes_df['total_votes']) >= 0.5)\n",
@@ -346,7 +355,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bUsyjLsIgCd0",
-        "outputId": "4910a2c8-e62e-4711-dda9-3f6b2fbe1a88"
+        "outputId": "df6d437e-dd2b-4075-9454-b35b78b052e2"
       },
       "source": [
         "vine_program_yes_df = helpful_voting_df.filter(helpful_voting_df['vine'] == 'Y')\n",
@@ -404,7 +413,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "l8MXOfOtgPKS",
-        "outputId": "5ab0e4c4-1de1-4987-bde8-c39b7bd286b1"
+        "outputId": "77dc35fd-000f-46d7-e7be-c13e93ed1a64"
       },
       "source": [
         "vine_program_no_df = helpful_voting_df.filter(helpful_voting_df['vine'] == 'N')\n",
@@ -462,7 +471,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "swk4AEgogtUY",
-        "outputId": "47785098-dfd4-433f-ebdd-5164b25d5e64"
+        "outputId": "4ed99900-fb7f-499f-c567-d6244a32ffd3"
       },
       "source": [
         "# Calculate total reviews for Vine participants\n",
@@ -498,7 +507,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HEebeMCGhPMz",
-        "outputId": "7c4afb33-eda0-4984-daa9-a386a9f61e8a"
+        "outputId": "79f917ef-1684-498a-e904-63df9cb81553"
       },
       "source": [
         "# Calculate total reviews for non-Vine participants\n",
@@ -522,6 +531,150 @@
             "Total Reviews (non-Vine Participants): 45706\n",
             "Total 5-Star Reviews (non-Vine Participants): 22546\n",
             "5-Star Review percentage (non-Vine Participants): 49.33%\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "V8Wa-paE8cXw"
+      },
+      "source": [
+        "## Additional Study removing non-verfied purchasers from non-Vine participants\n",
+        "Vine participants do not purchase the product themselves, therefore would be mostly filtered out if applied to their dataset."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "h7lUDi328jIJ",
+        "outputId": "3b4ce4f9-9478-48de-918a-85fa2238a0ec"
+      },
+      "source": [
+        "verified_helpful_voting_df = helpful_voting_df.filter(helpful_voting_df['verified_purchase'] == 'Y')\n",
+        "verified_helpful_voting_df.show()"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "+--------------+-----------+-------------+-----------+----+-----------------+\n",
+            "|     review_id|star_rating|helpful_votes|total_votes|vine|verified_purchase|\n",
+            "+--------------+-----------+-------------+-----------+----+-----------------+\n",
+            "| RQQ3KVTU5TJ4I|          5|           24|         29|   N|                Y|\n",
+            "|R3FELXWV9T5CWE|          2|           22|         24|   N|                Y|\n",
+            "| ROBYK6EZYK398|          5|           29|         30|   N|                Y|\n",
+            "|  RLNULBKRWNNR|          5|           42|         43|   N|                Y|\n",
+            "| R9QNQUL94RX1F|          3|           27|         33|   N|                Y|\n",
+            "| RTULFZTUS1VBP|          5|           51|         52|   N|                Y|\n",
+            "| RWB6V9IYCOJFX|          4|           39|         41|   N|                Y|\n",
+            "|R15FA7GCXKC7YE|          1|           40|         41|   N|                Y|\n",
+            "|R2OQAI6AV8AH8Z|          1|           19|         32|   N|                Y|\n",
+            "|R2XD5CWZ4Z87ZR|          5|           19|         25|   N|                Y|\n",
+            "|R3LLBXVCEY5JKB|          1|           33|         35|   N|                Y|\n",
+            "|R2DEO6P7BEZ9UI|          5|           38|         38|   N|                Y|\n",
+            "|R2CKYIHUSK3IEP|          1|           74|         88|   N|                Y|\n",
+            "| RY0DMUQKNF8MT|          5|           32|         33|   N|                Y|\n",
+            "|R33XCAJDTPOUQS|          5|           22|         23|   N|                Y|\n",
+            "| RGL4LGN3O9GQ0|          4|           34|         38|   N|                Y|\n",
+            "|R3W2R5Z85G9TH5|          1|           38|         41|   N|                Y|\n",
+            "|R1NWWU8ZLZ5HF2|          5|           21|         22|   N|                Y|\n",
+            "|R1ABAPTORVLY2R|          5|          138|        146|   N|                Y|\n",
+            "|R38Z7T00TUVGSQ|          2|           48|         59|   N|                Y|\n",
+            "+--------------+-----------+-------------+-----------+----+-----------------+\n",
+            "only showing top 20 rows\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wxIHxhkt9asj",
+        "outputId": "7e7438a6-4d5d-428c-cafc-947f47c446d2"
+      },
+      "source": [
+        "verified_vine_program_no_df = verified_helpful_voting_df.filter(verified_helpful_voting_df['vine'] == 'N')\n",
+        "verified_vine_program_no_df.show()"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "+--------------+-----------+-------------+-----------+----+-----------------+\n",
+            "|     review_id|star_rating|helpful_votes|total_votes|vine|verified_purchase|\n",
+            "+--------------+-----------+-------------+-----------+----+-----------------+\n",
+            "| RQQ3KVTU5TJ4I|          5|           24|         29|   N|                Y|\n",
+            "|R3FELXWV9T5CWE|          2|           22|         24|   N|                Y|\n",
+            "| ROBYK6EZYK398|          5|           29|         30|   N|                Y|\n",
+            "|  RLNULBKRWNNR|          5|           42|         43|   N|                Y|\n",
+            "| R9QNQUL94RX1F|          3|           27|         33|   N|                Y|\n",
+            "| RTULFZTUS1VBP|          5|           51|         52|   N|                Y|\n",
+            "| RWB6V9IYCOJFX|          4|           39|         41|   N|                Y|\n",
+            "|R15FA7GCXKC7YE|          1|           40|         41|   N|                Y|\n",
+            "|R2OQAI6AV8AH8Z|          1|           19|         32|   N|                Y|\n",
+            "|R2XD5CWZ4Z87ZR|          5|           19|         25|   N|                Y|\n",
+            "|R3LLBXVCEY5JKB|          1|           33|         35|   N|                Y|\n",
+            "|R2DEO6P7BEZ9UI|          5|           38|         38|   N|                Y|\n",
+            "|R2CKYIHUSK3IEP|          1|           74|         88|   N|                Y|\n",
+            "| RY0DMUQKNF8MT|          5|           32|         33|   N|                Y|\n",
+            "|R33XCAJDTPOUQS|          5|           22|         23|   N|                Y|\n",
+            "| RGL4LGN3O9GQ0|          4|           34|         38|   N|                Y|\n",
+            "|R3W2R5Z85G9TH5|          1|           38|         41|   N|                Y|\n",
+            "|R1NWWU8ZLZ5HF2|          5|           21|         22|   N|                Y|\n",
+            "|R1ABAPTORVLY2R|          5|          138|        146|   N|                Y|\n",
+            "|R38Z7T00TUVGSQ|          2|           48|         59|   N|                Y|\n",
+            "+--------------+-----------+-------------+-----------+----+-----------------+\n",
+            "only showing top 20 rows\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fHIddrJa9pCB",
+        "outputId": "98bf6a7d-9e5f-4b16-fd5f-a11ae1b4191c"
+      },
+      "source": [
+        "# Calculate total reviews for non-Vine participants\n",
+        "verified_total_reviews_vine_no = verified_vine_program_no_df.count()\n",
+        "\n",
+        "# Calculate total 5-star reviews for non-Vine participants\n",
+        "verified_total_5_star_reviews_vine_no = verified_vine_program_no_df.filter(verified_vine_program_no_df['star_rating'] == '5').count()\n",
+        "\n",
+        "# Calculate percentage of 5-star to total reviews for non-Vine participants\n",
+        "verified_five_star_percentage_vine_no = round((verified_total_5_star_reviews_vine_no / verified_total_reviews_vine_no)*100,2)\n",
+        "\n",
+        "print(f'Total Verified Reviews (non-Vine Participants): {verified_total_reviews_vine_no}')\n",
+        "print(f'Total 5-Star Verified Reviews (non-Vine Participants): {verified_total_5_star_reviews_vine_no}')\n",
+        "print(f'5-Star Review Verified percentage (non-Vine Participants): {verified_five_star_percentage_vine_no}%')"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Total Verified Reviews (non-Vine Participants): 30577\n",
+            "Total 5-Star Verified Reviews (non-Vine Participants): 15908\n",
+            "5-Star Review Verified percentage (non-Vine Participants): 52.03%\n"
           ],
           "name": "stdout"
         }
